# Shortcut

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.sh
app/: CMakeLists.txt  JT_JobScAdd.cpp  JT_JobScDao.cpp  JT_JobScDbAccess.cpp  JT_JobScDel.cpp  JT_JobScInit.cpp  JT_JobScQuery.cpp  JT_JobScTest.cpp  JT_JobScUpdate.cpp  MockJobScDbAccess.h  UT_example.cpp  main.cpp
docs/: JobSc_Design.md
src/: CMakeLists.txt  JobScImpl.cpp  JobScImpl.h  JobScInitializer.cpp  JobScInitializer.h  JobScLogger.h  JobScMgr.cpp  JobScSqlDefines.h  JobScTypes.h  JobScValue.cpp  JobScValue.h
src/base/: IdAllocator.cpp  IdAllocator.h  ShortcuLogger.h  ShortcuMgrLogger.h
src/dao/: JobScDao.cpp  JobScDao.h  JobScTransGuard.cpp
src/include/: JobScDefines.h  JobScItem.h  JobScLogger.h  JobScMgr.h  JobScPageQuery.h  JobScResult.h  JobScType.h  ShortccutType.h  ShortcutLogger.h  ShortcutType.h
src/storage/: DbAccess.cpp  DbAccess.h  DbBootstrap.h  DbDefine.h  DbResult.cpp  DbResult.h  DbValue.cpp  DbValue.h  JobScDbAccess.cpp  JobScDbAccess.h  JobScDbPageQuery.h  JobScDbValue.cpp  JobScDbValue.h  JobScSqlParam.cpp  JobScSqlParam.h  PageQuery.h  PageResult.h  SqlParam.cpp  SqlParam.h
